--- a/app/src/main/res/layout/activity_quiz_stat.xml
+++ b/app/src/main/res/layout/activity_quiz_stat.xml
@@ -40,14 +40,15 @@
 
     <Button
         android:id="@+id/okButton"
-        android:layout_width="203dp"
-        android:layout_height="74dp"
+        android:layout_width="98dp"
+        android:layout_height="55dp"
         android:layout_marginStart="104dp"
         android:layout_marginEnd="104dp"
         android:layout_marginBottom="133dp"
         android:text="Ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_marginBottom="23dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
