--- a/app/src/main/res/layout/activity_quiz_stat.xml
+++ b/app/src/main/res/layout/activity_quiz_stat.xml
@@ -6,35 +6,58 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/numberOfWords"
-        android:layout_width="388dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
-        android:text="Number of words:"
-        android:textSize="34sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/numberOfGuessedWords"
-        android:layout_width="387dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="144dp"
-        android:text="Guessed words:"
-        android:textSize="34sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/statsText"
         android:layout_width="185dp"
         android:layout_height="42dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="14dp"
-        android:text="STATS"
-        android:textSize="34sp"
+        android:text="Stats:"
+        android:textSize="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/mostStruggledWord"
+        android:layout_width="387dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="172dp"
+        android:text="The hardest word by now:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/timeSpendOnQuiz"
+        android:layout_width="387dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="208dp"
+        android:text="Time spend on quiz:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/numberOfWords"
+        android:layout_width="388dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="244dp"
+        android:text="Number of words:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/numberOfGuessedWords"
+        android:layout_width="387dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="280dp"
+        android:text="Guessed words:"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,12 +65,11 @@
         android:id="@+id/okButton"
         android:layout_width="98dp"
         android:layout_height="55dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginEnd="104dp"
         android:layout_marginBottom="133dp"
         android:text="Ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_marginBottom="23dp" />
 
