--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/dictionary_size"
-        android:layout_width="185dp"
-        android:layout_height="19dp"
+
+<!--    <TextView-->
+<!--        android:id="@+id/dictionary_size"-->
+<!--        android:layout_width="185dp"-->
+<!--        android:layout_height="19dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:text="Dictionary size:"-->
+<!--        android:textColorHint="#7A7A7A"-->
+<!--        android:textSize="16dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+    <Spinner
+        android:id="@+id/dictionary_spinner"
+        android:layout_width="154dp"
+        android:layout_height="57dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="40dp"
-        android:text="Dictionary size:"
-        android:textColorHint="#7A7A7A"
-        android:textSize="16dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -30,6 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <EditText
         android:id="@+id/wordEditText"
