--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,27 @@
     tools:context=".MainActivity">
 
 
-<!--    <TextView-->
-<!--        android:id="@+id/dictionary_size"-->
-<!--        android:layout_width="185dp"-->
-<!--        android:layout_height="19dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginBottom="40dp"-->
-<!--        android:text="Dictionary size:"-->
-<!--        android:textColorHint="#7A7A7A"-->
-<!--        android:textSize="16dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
-
-    <Spinner
-        android:id="@+id/dictionary_spinner"
-        android:layout_width="154dp"
-        android:layout_height="57dp"
+    <TextView
+        android:id="@+id/dictionary_name"
+        android:layout_width="185dp"
+        android:layout_height="19dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="56dp"
+        android:text="Dictionary size:"
+        android:textColorHint="#7A7A7A"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/dictionary_size"
+        android:layout_width="185dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="76dp"
+        android:text="Dictionary size:"
+        android:textColorHint="#7A7A7A"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
