--- a/app/src/main/res/layout/activity_all_dictionaries.xml
+++ b/app/src/main/res/layout/activity_all_dictionaries.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- TableLayout to display dictionaries -->
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:layout_above="@id/addDictionaryButton">
 
         <TableLayout
             android:id="@+id/tableLayout"
@@ -18,12 +17,20 @@
             android:stretchColumns="*" />
     </ScrollView>
 
-    <!-- Button to go back -->
+    <Button
+        android:id="@+id/addDictionaryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="Add"
+        android:layout_marginEnd="16dp"/>
+
     <Button
         android:id="@+id/backButtonDictionaries"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:text="Back" />
-
-</LinearLayout>
+</RelativeLayout>
