Added possibility to pick new dictionary as main

--- a/app/src/main/res/layout/activity_all_dictionaries.xml
+++ b/app/src/main/res/layout/activity_all_dictionaries.xml
@@ -10,11 +10,12 @@
         android:layout_height="match_parent"
         android:layout_above="@id/addDictionaryButton">
 
-        <TableLayout
-            android:id="@+id/tableLayout"
+        <LinearLayout
+            android:id="@+id/dictionaryContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="*" />
+            android:orientation="vertical" />
+
     </ScrollView>
 
     <Button
