--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_margin_top">16dp</dimen>
+    <dimen name="dictionary_buttons_margin">48dp</dimen>
 </resources>
