--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -12,6 +12,9 @@
             <item
                 android:id="@+id/show_dictionary"
                 android:title="Show" />
+            <item
+                android:id="@+id/share_dictionary"
+                android:title="Share" />
         </menu>
     </item>
     <item
